hotfix: fix loader z-index

--- a/pages/index.css
+++ b/pages/index.css
@@ -97,7 +97,7 @@
   width: 100%;
   height: 100vh;
   background-color: var(--color-bg);
-  z-index: 2;
+  z-index: 3;
   opacity: 0.9;
 }
 @media screen and (prefers-color-scheme: dark) {
